--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -178,6 +178,8 @@
     <string name="send_message">Send message</string>
     <string name="enter_contact_name">Enter contact name</string>
     <string name="error_processing_vcard">Error processing vcard</string>
+    <string name="compose_recents">Recents</string>
+    <string name="compose_groups">Groups</string>
 
     <!-- Onboarding Screen -->
     <string name="permissions_needed">The app can\'t work without those permissions! You need to
