--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -185,7 +185,7 @@
     <string name="permissions_needed">The app can\'t work without those permissions! You need to
         accept them before we can continue.</string>
     <string name="loading_messages">Optimizing…</string>
-    <string name="loading_messages_summary">Just working on getting your messages into the app, it
+    <string name="loading_messages_summary">Just working on getting your messages into the app. It
         won\'t take long!</string>
     <string name="tooltip_got_it">Got It!</string>
     <string name="navigation_drawer_conversation_hint">More options for this conversation are stored in the navigation drawer.</string>
