--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -238,6 +238,7 @@
         where you have not created an individual Notification Channel for per-conversation customization.</string>
     <string name="test_notifications_channel">Test notifications</string>
     <string name="status_notifications_channel">Status notifications</string>
+    <string name="background_service_channel">Background service notifications</string>
     <string name="general_notifications_channel">General notifications</string>
     <string name="media_parse_channel">Media parser</string>
     <string name="group_summary_notifications">Message group summaries</string>
@@ -246,6 +247,7 @@
     <string name="media_parse_text">Parsing media from previous text message…</string>
     <string name="creating_channels_text">Creating notification channels…</string>
     <string name="write_new_message">Write a new message…</string>
+    <string name="receiving_a_message">Receiving a message…</string>
 
     <!-- About, Help and Feedback and Settings -->
     <string name="changelog">Changelog</string>
