add 2 min repeat interval

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -307,6 +307,7 @@
     <string name="heads_up">Heads Up</string>
     <string name="repeat_never">Never</string>
     <string name="repeat_one_min">Every minute</string>
+    <string name="repeat_two_mins">Every two minutes</string>
     <string name="repeat_five_mins">Every five minutes</string>
     <string name="repeat_ten_mins">Every ten minutes</string>
     <string name="repeat_half_hour">Every half hour</string>
