--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -219,6 +219,7 @@
         <item quantity="other">%1$d new messages</item>
     </plurals>
     <string name="read">Read</string>
+    <string name="mute">Mute</string>
     <string name="reply">Reply</string>
     <string name="reply_to">Reply to %1$s</string>
     <string name="call">Call</string>
